fixed alignment and made new buttons to see products

--- a/styles/my_account_style.css
+++ b/styles/my_account_style.css
@@ -161,4 +161,10 @@ rgb(51, 51, 51) - text
 
 }
 
+.adjustP{
+    position: absolute;
+    right: 20px;
+
+}
+
 
